shared/cgc/parser.output
Terminals unused in grammar

   CONTINUE_SY
   GOTO_SY
   PASTING_SY
   THIS_SY
   VARYING_SY
   VERTEXSHADER_SY
   PIXELSHADER_SY
   FIRST_USER_TOKEN_SY


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: external_declaration
    2                 | compilation_unit external_declaration

    3 external_declaration: declaration
    4                     | cbuffer_decl ';'
    5                     | TECHNIQUE_SY identifier '{' pass_list '}'
    6                     | TECHNIQUE_SY identifier annotation '{' pass_list '}'
    7                     | function_definition

    8 declaration: declaration_specifiers ';'
    9            | declaration_specifiers init_declarator_list ';'
   10            | ERROR_SY ';'

   11 abstract_declaration: abstract_declaration_specifiers abstract_declarator

   12 declaration_specifiers: abstract_declaration_specifiers
   13                       | template_decl
   14                       | TYPEDEF_SY abstract_declaration_specifiers

   15 abstract_declaration_specifiers: abstract_declaration_specifiers2
   16                                | type_qualifier abstract_declaration_specifiers
   17                                | storage_class abstract_declaration_specifiers
   18                                | type_domain abstract_declaration_specifiers
   19                                | in_out abstract_declaration_specifiers
   20                                | function_specifier abstract_declaration_specifiers
   21                                | PACKED_SY abstract_declaration_specifiers
   22                                | ROWMAJOR_SY abstract_declaration_specifiers
   23                                | COLMAJOR_SY abstract_declaration_specifiers
   24                                | LOWP_SY abstract_declaration_specifiers
   25                                | MEDIUMP_SY abstract_declaration_specifiers
   26                                | HIGHP_SY abstract_declaration_specifiers

   27 abstract_declaration_specifiers2: type_specifier
   28                                 | abstract_declaration_specifiers2 type_qualifier
   29                                 | abstract_declaration_specifiers2 storage_class
   30                                 | abstract_declaration_specifiers2 type_domain
   31                                 | abstract_declaration_specifiers2 in_out
   32                                 | abstract_declaration_specifiers2 function_specifier
   33                                 | abstract_declaration_specifiers2 PACKED_SY

   34 init_declarator_list: init_declarator
   35                     | init_declarator_list ',' init_declarator

   36 init_declarator: declarator
   37                | declarator '=' initializer

   38 pass_list: pass
   39          | pass_list pass

   40 pass: PASS_SY identifier '{' pass_item_list '}'

   41 pass_item_list: pass_item
   42               | pass_item_list ';' pass_item
   43               | pass_item_list ';'

   44 pass_item: identifier '=' pass_state_value

   45 pass_state_value: state_value
   46                 | COMPILE_SY identifier identifier '(' ')'
   47                 | ASM_SY '{' assembly '}'

   48 assembly: %empty

   49 type_specifier: INT_SY
   50               | UNSIGNED_SY INT_SY
   51               | FLOAT_SY
   52               | VOID_SY
   53               | BOOLEAN_SY
   54               | TEXOBJ_SY
   55               | enum_specifier
   56               | struct_or_connector_specifier
   57               | TYPEIDENT_SY
   58               | templated_type
   59               | error

   60 type_qualifier: CONST_SY

   61 type_domain: UNIFORM_SY

   62 storage_class: STATIC_SY
   63              | EXTERN_SY
   64              | NOINTERP_SY
   65              | PRECISE_SY
   66              | SHARED_SY
   67              | GROUPSHARED_SY
   68              | VOLATILE_SY

   69 function_specifier: INLINE_SY
   70                   | INTERNAL_SY

   71 in_out: IN_SY
   72       | OUT_SY
   73       | INOUT_SY

   74 struct_or_connector_specifier: struct_or_connector_header struct_compound_header struct_declaration_list '}'
   75                              | untagged_struct_header struct_compound_header struct_declaration_list '}'
   76                              | struct_or_connector_header

   77 struct_compound_header: compound_header

   78 struct_or_connector_header: STRUCT_SY struct_identifier
   79                           | STRUCT_SY struct_identifier ':' semantics_identifier
   80                           | STRUCT_SY struct_identifier ':' TYPEIDENT_SY

   81 struct_identifier: identifier
   82                  | TYPEIDENT_SY

   83 untagged_struct_header: STRUCT_SY

   84 struct_declaration_list: struct_declaration
   85                        | struct_declaration_list struct_declaration

   86 struct_declaration: declaration
   87                   | function_definition

   88 cbuffer_decl: cbuffer_header cbuffer_compound_header struct_declaration_list '}'

   89 cbuffer_compound_header: compound_header

   90 cbuffer_header: CBUFFER_SY struct_identifier
   91               | CBUFFER_SY struct_identifier ':' register_spec

   92 $@1: %empty

   93 template_decl: template_decl_header '{' $@1 struct_declaration_list '}'
   94              | template_decl_header

   95 template_decl_header: template_params STRUCT_SY struct_identifier
   96                     | template_params STRUCT_SY struct_identifier ':' TYPEIDENT_SY

   97 $@2: %empty

   98 template_params: TEMPLATE_SY '<' $@2 template_param_list '>'

   99 template_param_list: template_param
  100                    | template_param_list ',' template_param

  101 template_param: TYPEDEF_SY identifier
  102               | abstract_declaration

  103 templated_type: TEMPLATEIDENT_SY

  104 $@3: %empty

  105 $@4: %empty

  106 $@5: %empty

  107 templated_type: TEMPLATEIDENT_SY $@3 '<' $@4 template_arg_list $@5 '>'

  108 template_arg_list: %empty
  109                  | non_empty_template_arg_list

  110 non_empty_template_arg_list: template_arg
  111                            | non_empty_template_arg_list ',' template_arg

  112 template_arg: type_specifier
  113             | additive_expression

  114 $@6: %empty

  115 enum_specifier: enum_header '{' $@6 enum_declaration_list '}'

  116 $@7: %empty

  117 enum_specifier: untagged_enum_header '{' $@7 enum_declaration_list '}'
  118               | enum_header

  119 enum_header: ENUM_SY struct_identifier

  120 untagged_enum_header: ENUM_SY

  121 enum_declaration_list: enum_declaration
  122                      | enum_declaration_list ',' enum_declaration

  123 enum_declaration: identifier
  124                 | identifier '=' INTCONST_SY

  125 $@8: %empty

  126 annotation: '<' $@8 annotation_decl_list '>'

  127 annotation_decl_list: %empty
  128                     | annotation_decl_list declaration

  129 attribute: '[' identifier ']'
  130          | '[' identifier '(' INTCONST_SY ')' ']'
  131          | '[' identifier '(' INTCONST_SY ',' INTCONST_SY ')' ']'
  132          | '[' identifier '(' INTCONST_SY ',' INTCONST_SY ',' INTCONST_SY ')' ']'

  133 declarator: semantic_declarator
  134           | semantic_declarator annotation

  135 semantic_declarator: basic_declarator
  136                    | basic_declarator ':' semantics_identifier
  137                    | basic_declarator ':' register_spec
  138                    | basic_declarator ':' semantics_identifier ':' register_spec

  139 register_spec: REGISTER_SY '(' identifier ')'
  140              | REGISTER_SY '(' identifier ',' identifier ')'

  141 basic_declarator: identifier
  142                 | basic_declarator '[' constant_expression ']'
  143                 | basic_declarator '[' ']'
  144                 | function_decl_header parameter_list ')'
  145                 | function_decl_header abstract_parameter_list ')'

  146 function_decl_header: basic_declarator '('
  147                     | OPERATOR_SY operator '('

  148 operator: '+'
  149         | '-'
  150         | '!'
  151         | '~'
  152         | '*'
  153         | '/'
  154         | '%'
  155         | GG_SY
  156         | '<'
  157         | '>'
  158         | LE_SY
  159         | GE_SY
  160         | EQ_SY
  161         | NE_SY
  162         | '&'
  163         | '^'
  164         | '|'
  165         | AND_SY
  166         | OR_SY
  167         | '(' ')'
  168         | '[' ']'

  169 abstract_declarator: %empty
  170                    | abstract_declarator '[' constant_expression ']'
  171                    | abstract_declarator '[' ']'

  172 parameter_list: parameter_declaration
  173               | parameter_list ',' parameter_declaration

  174 parameter_declaration: attribute parameter_declaration
  175                      | declaration_specifiers declarator
  176                      | declaration_specifiers declarator '=' initializer

  177 abstract_parameter_list: %empty
  178                        | non_empty_abstract_parameter_list

  179 non_empty_abstract_parameter_list: abstract_declaration
  180                                  | non_empty_abstract_parameter_list ',' abstract_declaration

  181 initializer: expression
  182            | '{' initializer_list '}'
  183            | '{' initializer_list ',' '}'
  184            | SAMPLERSTATE_SY '{' state_list '}'

  185 initializer_list: initializer
  186                 | initializer_list ',' initializer

  187 state_list: state ';'
  188           | state_list state ';'

  189 state: identifier '=' state_value
  190      | TYPEIDENT_SY '=' state_value

  191 state_value: identifier
  192            | constant
  193            | '<' additive_expression '>'

  194 variable: basic_variable
  195         | scope_identifier COLONCOLON_SY basic_variable

  196 basic_variable: variable_identifier

  197 primary_expression: variable
  198                   | constant
  199                   | '(' expression ')'
  200                   | type_specifier '(' expression_list ')'

  201 postfix_expression: primary_expression
  202                   | postfix_expression PLUSPLUS_SY
  203                   | postfix_expression MINUSMINUS_SY
  204                   | postfix_expression '.' member_identifier
  205                   | postfix_expression '[' expression ']'
  206                   | postfix_expression '(' actual_argument_list ')'

  207 actual_argument_list: %empty
  208                     | non_empty_argument_list

  209 non_empty_argument_list: expression
  210                        | non_empty_argument_list ',' expression

  211 expression_list: expression
  212                | expression_list ',' expression

  213 unary_expression: postfix_expression
  214                 | PLUSPLUS_SY unary_expression
  215                 | MINUSMINUS_SY unary_expression
  216                 | '+' unary_expression
  217                 | '-' unary_expression
  218                 | '!' unary_expression
  219                 | '~' unary_expression

  220 cast_expression: unary_expression
  221                | '(' abstract_declaration ')' cast_expression

  222 multiplicative_expression: cast_expression
  223                          | multiplicative_expression '*' cast_expression
  224                          | multiplicative_expression '/' cast_expression
  225                          | multiplicative_expression '%' cast_expression

  226 additive_expression: multiplicative_expression
  227                    | additive_expression '+' multiplicative_expression
  228                    | additive_expression '-' multiplicative_expression

  229 shift_expression: additive_expression
  230                 | shift_expression LL_SY additive_expression
  231                 | shift_expression GG_SY additive_expression

  232 relational_expression: shift_expression
  233                      | relational_expression '<' shift_expression
  234                      | relational_expression '>' shift_expression
  235                      | relational_expression LE_SY shift_expression
  236                      | relational_expression GE_SY shift_expression

  237 equality_expression: relational_expression
  238                    | equality_expression EQ_SY relational_expression
  239                    | equality_expression NE_SY relational_expression

  240 AND_expression: equality_expression
  241               | AND_expression '&' equality_expression

  242 exclusive_OR_expression: AND_expression
  243                        | exclusive_OR_expression '^' AND_expression

  244 inclusive_OR_expression: exclusive_OR_expression
  245                        | inclusive_OR_expression '|' exclusive_OR_expression

  246 logical_AND_expression: inclusive_OR_expression
  247                       | logical_AND_expression AND_SY inclusive_OR_expression

  248 logical_OR_expression: logical_AND_expression
  249                      | logical_OR_expression OR_SY logical_AND_expression

  250 conditional_expression: logical_OR_expression
  251                       | conditional_test '?' expression ':' conditional_expression

  252 conditional_test: logical_OR_expression

  253 expression: conditional_expression

  254 function_definition: function_definition_header block_item_list '}'
  255                    | function_definition_header '}'

  256 function_definition_header: attribute function_definition_header
  257                           | declaration_specifiers declarator '{'

  258 statement: attribute statement
  259          | balanced_statement
  260          | dangling_statement

  261 balanced_statement: compound_statement
  262                   | discard_statement
  263                   | expression_statement
  264                   | iteration_statement
  265                   | if_statement
  266                   | switch_statement
  267                   | break_statement
  268                   | return_statement
  269                   | asm_statement

  270 dangling_statement: dangling_if
  271                   | dangling_iteration

  272 asm_statement: ASM_SY '{' assembly '}'

  273 discard_statement: DISCARD_SY ';'
  274                  | DISCARD_SY expression ';'

  275 break_statement: BREAK_SY ';'

  276 if_statement: if_header balanced_statement ELSE_SY balanced_statement

  277 dangling_if: if_header statement
  278            | if_header balanced_statement ELSE_SY dangling_statement

  279 if_header: IF_SY '(' boolean_scalar_expression ')'

  280 switch_statement: SWITCH_SY '(' expression ')' compound_header switch_item_list compound_tail

  281 labeled_statement: CASE_SY constant_expression ':' statement
  282                  | DEFAULT_SY ':' statement

  283 switch_item_list: labeled_statement
  284                 | switch_item_list labeled_statement

  285 compound_statement: compound_header block_item_list compound_tail
  286                   | compound_header compound_tail

  287 compound_header: '{'

  288 compound_tail: '}'

  289 block_item_list: block_item
  290                | block_item_list block_item

  291 block_item: declaration
  292           | statement

  293 expression_statement: expression_statement2 ';'
  294                     | ';'

  295 expression_statement2: postfix_expression '=' expression
  296                      | expression
  297                      | postfix_expression ASSIGNMINUS_SY expression
  298                      | postfix_expression ASSIGNMOD_SY expression
  299                      | postfix_expression ASSIGNPLUS_SY expression
  300                      | postfix_expression ASSIGNSLASH_SY expression
  301                      | postfix_expression ASSIGNSTAR_SY expression
  302                      | postfix_expression ASSIGNAND_SY expression
  303                      | postfix_expression ASSIGNOR_SY expression
  304                      | postfix_expression ASSIGNXOR_SY expression

  305 iteration_statement: WHILE_SY '(' boolean_scalar_expression ')' balanced_statement
  306                    | DO_SY statement WHILE_SY '(' boolean_scalar_expression ')' ';'
  307                    | FOR_SY '(' for_expression_init ';' boolean_expression_opt ';' for_expression_opt ')' balanced_statement

  308 dangling_iteration: WHILE_SY '(' boolean_scalar_expression ')' dangling_statement
  309                   | FOR_SY '(' for_expression_init ';' boolean_expression_opt ';' for_expression_opt ')' dangling_statement

  310 boolean_scalar_expression: expression

  311 for_expression_opt: for_expression
  312                   | %empty

  313 for_expression: expression_statement2
  314               | for_expression ',' expression_statement2

  315 for_expression_init: declaration_specifiers init_declarator_list
  316                    | for_expression_opt

  317 boolean_expression_opt: boolean_scalar_expression
  318                       | %empty

  319 return_statement: RETURN_SY expression ';'
  320                 | RETURN_SY ';'

  321 member_identifier: identifier

  322 scope_identifier: identifier

  323 semantics_identifier: identifier

  324 variable_identifier: identifier

  325 identifier: IDENT_SY

  326 constant: INTCONST_SY
  327         | UINTCONST_SY
  328         | CFLOATCONST_SY
  329         | FLOATCONST_SY
  330         | FLOATHCONST_SY
  331         | FLOATXCONST_SY
  332         | STRCONST_SY

  333 constant_expression: expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 150 218
'%' (37) 154 225
'&' (38) 162 241
'(' (40) 46 130 131 132 139 140 146 147 167 199 200 206 221 279 280
    305 306 307 308 309
')' (41) 46 130 131 132 139 140 144 145 167 199 200 206 221 279 280
    305 306 307 308 309
'*' (42) 152 223
'+' (43) 148 216 227
',' (44) 35 100 111 122 131 132 140 173 180 183 186 210 212 314
'-' (45) 149 217 228
'.' (46) 204
'/' (47) 153 224
':' (58) 79 80 91 96 136 137 138 251 281 282
';' (59) 4 8 9 10 42 43 187 188 273 274 275 293 294 306 307 309 319
    320
'<' (60) 98 107 126 156 193 233
'=' (61) 37 44 124 176 189 190 295
'>' (62) 98 107 126 157 193 234
'?' (63) 251
'[' (91) 129 130 131 132 142 143 168 170 171 205
']' (93) 129 130 131 132 142 143 168 170 171 205
'^' (94) 163 243
'{' (123) 5 6 40 47 93 115 117 182 183 184 257 272 287
'|' (124) 164 245
'}' (125) 5 6 40 47 74 75 88 93 115 117 182 183 184 254 255 272 288
'~' (126) 151 219
error (256) 59
AND_SY (258) 165 247
ASM_SY (259) 47 272
ASSIGNMINUS_SY (260) 297
ASSIGNMOD_SY (261) 298
ASSIGNPLUS_SY (262) 299
ASSIGNSLASH_SY (263) 300
ASSIGNSTAR_SY (264) 301
ASSIGNAND_SY (265) 302
ASSIGNOR_SY (266) 303
ASSIGNXOR_SY (267) 304
BOOLEAN_SY (268) 53
BREAK_SY (269) 275
CASE_SY (270) 281
CFLOATCONST_SY (271) 328
COLONCOLON_SY (272) 195
CONST_SY (273) 60
CONTINUE_SY (274)
DEFAULT_SY (275) 282
DISCARD_SY (276) 273 274
DO_SY (277) 306
EQ_SY (278) 160 238
ELSE_SY (279) 276 278
ERROR_SY (280) 10
EXTERN_SY (281) 63
FLOAT_SY (282) 51
FLOATCONST_SY (283) 329
FLOATHCONST_SY (284) 330
FLOATXCONST_SY (285) 331
FOR_SY (286) 307 309
GE_SY (287) 159 236
GG_SY (288) 155 231
GOTO_SY (289)
IDENT_SY (290) 325
PASTING_SY (291)
IF_SY (292) 279
IN_SY (293) 71
INLINE_SY (294) 69
INOUT_SY (295) 73
INT_SY (296) 49 50
UNSIGNED_SY (297) 50
INTCONST_SY (298) 124 130 131 132 326
UINTCONST_SY (299) 327
INTERNAL_SY (300) 70
LE_SY (301) 158 235
LL_SY (302) 230
MINUSMINUS_SY (303) 203 215
NE_SY (304) 161 239
OR_SY (305) 166 249
OUT_SY (306) 72
PACKED_SY (307) 21 33
PLUSPLUS_SY (308) 202 214
RETURN_SY (309) 319 320
STATIC_SY (310) 62
STRCONST_SY (311) 332
STRUCT_SY (312) 78 79 80 83 95 96
SWITCH_SY (313) 280
TEXOBJ_SY (314) 54
THIS_SY (315)
TYPEDEF_SY (316) 14 101
TYPEIDENT_SY (317) 57 80 82 96 190
TEMPLATEIDENT_SY (318) 103 107
UNIFORM_SY (319) 61
VARYING_SY (320)
VOID_SY (321) 52
WHILE_SY (322) 305 306 308
SAMPLERSTATE_SY (323) 184
TECHNIQUE_SY (324) 5 6
PASS_SY (325) 40
VERTEXSHADER_SY (326)
PIXELSHADER_SY (327)
COMPILE_SY (328) 46
ROWMAJOR_SY (329) 22
COLMAJOR_SY (330) 23
NOINTERP_SY (331) 64
PRECISE_SY (332) 65
SHARED_SY (333) 66
GROUPSHARED_SY (334) 67
VOLATILE_SY (335) 68
REGISTER_SY (336) 139 140
ENUM_SY (337) 119 120
LOWP_SY (338) 24
MEDIUMP_SY (339) 25
HIGHP_SY (340) 26
CBUFFER_SY (341) 90 91
TEMPLATE_SY (342) 98
OPERATOR_SY (343) 147
FIRST_USER_TOKEN_SY (344)


Nonterminals, with rules where they appear

$accept (114)
    on left: 0
compilation_unit (115)
    on left: 1 2, on right: 0 2
external_declaration (116)
    on left: 3 4 5 6 7, on right: 1 2
declaration (117)
    on left: 8 9 10, on right: 3 86 128 291
abstract_declaration (118)
    on left: 11, on right: 102 179 180 221
declaration_specifiers (119)
    on left: 12 13 14, on right: 8 9 175 176 257 315
abstract_declaration_specifiers (120)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26, on right: 11 12 14
    16 17 18 19 20 21 22 23 24 25 26
abstract_declaration_specifiers2 (121)
    on left: 27 28 29 30 31 32 33, on right: 15 28 29 30 31 32 33
init_declarator_list (122)
    on left: 34 35, on right: 9 35 315
init_declarator (123)
    on left: 36 37, on right: 34 35
pass_list (124)
    on left: 38 39, on right: 5 6 39
pass (125)
    on left: 40, on right: 38 39
pass_item_list (126)
    on left: 41 42 43, on right: 40 42 43
pass_item (127)
    on left: 44, on right: 41 42
pass_state_value (128)
    on left: 45 46 47, on right: 44
assembly (129)
    on left: 48, on right: 47 272
type_specifier (130)
    on left: 49 50 51 52 53 54 55 56 57 58 59, on right: 27 112 200
type_qualifier (131)
    on left: 60, on right: 16 28
type_domain (132)
    on left: 61, on right: 18 30
storage_class (133)
    on left: 62 63 64 65 66 67 68, on right: 17 29
function_specifier (134)
    on left: 69 70, on right: 20 32
in_out (135)
    on left: 71 72 73, on right: 19 31
struct_or_connector_specifier (136)
    on left: 74 75 76, on right: 56
struct_compound_header (137)
    on left: 77, on right: 74 75
struct_or_connector_header (138)
    on left: 78 79 80, on right: 74 76
struct_identifier (139)
    on left: 81 82, on right: 78 79 80 90 91 95 96 119
untagged_struct_header (140)
    on left: 83, on right: 75
struct_declaration_list (141)
    on left: 84 85, on right: 74 75 85 88 93
struct_declaration (142)
    on left: 86 87, on right: 84 85
cbuffer_decl (143)
    on left: 88, on right: 4
cbuffer_compound_header (144)
    on left: 89, on right: 88
cbuffer_header (145)
    on left: 90 91, on right: 88
template_decl (146)
    on left: 93 94, on right: 13
$@1 (147)
    on left: 92, on right: 93
template_decl_header (148)
    on left: 95 96, on right: 93 94
template_params (149)
    on left: 98, on right: 95 96
$@2 (150)
    on left: 97, on right: 98
template_param_list (151)
    on left: 99 100, on right: 98 100
template_param (152)
    on left: 101 102, on right: 99 100
templated_type (153)
    on left: 103 107, on right: 58
$@3 (154)
    on left: 104, on right: 107
$@4 (155)
    on left: 105, on right: 107
$@5 (156)
    on left: 106, on right: 107
template_arg_list (157)
    on left: 108 109, on right: 107
non_empty_template_arg_list (158)
    on left: 110 111, on right: 109 111
template_arg (159)
    on left: 112 113, on right: 110 111
enum_specifier (160)
    on left: 115 117 118, on right: 55
$@6 (161)
    on left: 114, on right: 115
$@7 (162)
    on left: 116, on right: 117
enum_header (163)
    on left: 119, on right: 115 118
untagged_enum_header (164)
    on left: 120, on right: 117
enum_declaration_list (165)
    on left: 121 122, on right: 115 117 122
enum_declaration (166)
    on left: 123 124, on right: 121 122
annotation (167)
    on left: 126, on right: 6 134
$@8 (168)
    on left: 125, on right: 126
annotation_decl_list (169)
    on left: 127 128, on right: 126 128
attribute (170)
    on left: 129 130 131 132, on right: 174 256 258
declarator (171)
    on left: 133 134, on right: 36 37 175 176 257
semantic_declarator (172)
    on left: 135 136 137 138, on right: 133 134
register_spec (173)
    on left: 139 140, on right: 91 137 138
basic_declarator (174)
    on left: 141 142 143 144 145, on right: 135 136 137 138 142 143
    146
function_decl_header (175)
    on left: 146 147, on right: 144 145
operator (176)
    on left: 148 149 150 151 152 153 154 155 156 157 158 159 160 161
    162 163 164 165 166 167 168, on right: 147
abstract_declarator (177)
    on left: 169 170 171, on right: 11 170 171
parameter_list (178)
    on left: 172 173, on right: 144 173
parameter_declaration (179)
    on left: 174 175 176, on right: 172 173 174
abstract_parameter_list (180)
    on left: 177 178, on right: 145
non_empty_abstract_parameter_list (181)
    on left: 179 180, on right: 178 180
initializer (182)
    on left: 181 182 183 184, on right: 37 176 185 186
initializer_list (183)
    on left: 185 186, on right: 182 183 186
state_list (184)
    on left: 187 188, on right: 184 188
state (185)
    on left: 189 190, on right: 187 188
state_value (186)
    on left: 191 192 193, on right: 45 189 190
variable (187)
    on left: 194 195, on right: 197
basic_variable (188)
    on left: 196, on right: 194 195
primary_expression (189)
    on left: 197 198 199 200, on right: 201
postfix_expression (190)
    on left: 201 202 203 204 205 206, on right: 202 203 204 205 206
    213 295 297 298 299 300 301 302 303 304
actual_argument_list (191)
    on left: 207 208, on right: 206
non_empty_argument_list (192)
    on left: 209 210, on right: 208 210
expression_list (193)
    on left: 211 212, on right: 200 212
unary_expression (194)
    on left: 213 214 215 216 217 218 219, on right: 214 215 216 217
    218 219 220
cast_expression (195)
    on left: 220 221, on right: 221 222 223 224 225
multiplicative_expression (196)
    on left: 222 223 224 225, on right: 223 224 225 226 227 228
additive_expression (197)
    on left: 226 227 228, on right: 113 193 227 228 229 230 231
shift_expression (198)
    on left: 229 230 231, on right: 230 231 232 233 234 235 236
relational_expression (199)
    on left: 232 233 234 235 236, on right: 233 234 235 236 237 238
    239
equality_expression (200)
    on left: 237 238 239, on right: 238 239 240 241
AND_expression (201)
    on left: 240 241, on right: 241 242 243
exclusive_OR_expression (202)
    on left: 242 243, on right: 243 244 245
inclusive_OR_expression (203)
    on left: 244 245, on right: 245 246 247
logical_AND_expression (204)
    on left: 246 247, on right: 247 248 249
logical_OR_expression (205)
    on left: 248 249, on right: 249 250 252
conditional_expression (206)
    on left: 250 251, on right: 251 253
conditional_test (207)
    on left: 252, on right: 251
expression (208)
    on left: 253, on right: 181 199 205 209 210 211 212 251 274 280
    295 296 297 298 299 300 301 302 303 304 310 319 333
function_definition (209)
    on left: 254 255, on right: 7 87
function_definition_header (210)
    on left: 256 257, on right: 254 255 256
statement (211)
    on left: 258 259 260, on right: 258 277 281 282 292 306
balanced_statement (212)
    on left: 261 262 263 264 265 266 267 268 269, on right: 259 276
    278 305 307
dangling_statement (213)
    on left: 270 271, on right: 260 278 308 309
asm_statement (214)
    on left: 272, on right: 269
discard_statement (215)
    on left: 273 274, on right: 262
break_statement (216)
    on left: 275, on right: 267
if_statement (217)
    on left: 276, on right: 265
dangling_if (218)
    on left: 277 278, on right: 270
if_header (219)
    on left: 279, on right: 276 277 278
switch_statement (220)
    on left: 280, on right: 266
labeled_statement (221)
    on left: 281 282, on right: 283 284
switch_item_list (222)
    on left: 283 284, on right: 280 284
compound_statement (223)
    on left: 285 286, on right: 261
compound_header (224)
    on left: 287, on right: 77 89 280 285 286
compound_tail (225)
    on left: 288, on right: 280 285 286
block_item_list (226)
    on left: 289 290, on right: 254 285 290
block_item (227)
    on left: 291 292, on right: 289 290
expression_statement (228)
    on left: 293 294, on right: 263
expression_statement2 (229)
    on left: 295 296 297 298 299 300 301 302 303 304, on right: 293
    313 314
iteration_statement (230)
    on left: 305 306 307, on right: 264
dangling_iteration (231)
    on left: 308 309, on right: 271
boolean_scalar_expression (232)
    on left: 310, on right: 279 305 306 308 317
for_expression_opt (233)
    on left: 311 312, on right: 307 309 316
for_expression (234)
    on left: 313 314, on right: 311 314
for_expression_init (235)
    on left: 315 316, on right: 307 309
boolean_expression_opt (236)
    on left: 317 318, on right: 307 309
return_statement (237)
    on left: 319 320, on right: 268
member_identifier (238)
    on left: 321, on right: 204
scope_identifier (239)
    on left: 322, on right: 195
semantics_identifier (240)
    on left: 323, on right: 79 136 138
variable_identifier (241)
    on left: 324, on right: 196
identifier (242)
    on left: 325, on right: 5 6 40 44 46 81 101 123 124 129 130 131
    132 139 140 141 189 191 321 322 323 324
constant (243)
    on left: 326 327 328 329 330 331 332, on right: 192 198
constant_expression (244)
    on left: 333, on right: 142 170 281


State 0

    0 $accept: . compilation_unit $end

    error             shift, and go to state 1
    BOOLEAN_SY        shift, and go to state 2
    CONST_SY          shift, and go to state 3
    ERROR_SY          shift, and go to state 4
    EXTERN_SY         shift, and go to state 5
    FLOAT_SY          shift, and go to state 6
    IN_SY             shift, and go to state 7
    INLINE_SY         shift, and go to state 8
    INOUT_SY          shift, and go to state 9
    INT_SY            shift, and go to state 10
    UNSIGNED_SY       shift, and go to state 11
    INTERNAL_SY       shift, and go to state 12
    OUT_SY            shift, and go to state 13
    PACKED_SY         shift, and go to state 14
    STATIC_SY         shift, and go to state 15
    STRUCT_SY         shift, and go to state 16
    TEXOBJ_SY         shift, and go to state 17
    TYPEDEF_SY        shift, and go to state 18
    TYPEIDENT_SY      shift, and go to state 19
    TEMPLATEIDENT_SY  shift, and go to state 20
    UNIFORM_SY        shift, and go to state 21
    VOID_SY           shift, and go to state 22
    TECHNIQUE_SY      shift, and go to state 23
    ROWMAJOR_SY       shift, and go to state 24
    COLMAJOR_SY       shift, and go to state 25
    NOINTERP_SY       shift, and go to state 26
    PRECISE_SY        shift, and go to state 27
    SHARED_SY         shift, and go to state 28
    GROUPSHARED_SY    shift, and go to state 29
    VOLATILE_SY       shift, and go to state 30
    ENUM_SY           shift, and go to state 31
    LOWP_SY           shift, and go to state 32
    MEDIUMP_SY        shift, and go to state 33
    HIGHP_SY          shift, and go to state 34
    CBUFFER_SY        shift, and go to state 35
    TEMPLATE_SY       shift, and go to state 36
    '['               shift, and go to state 37

    compilation_unit                  go to state 38
    external_declaration              go to state 39
    declaration                       go to state 40
    declaration_specifiers            go to state 41
    abstract_declaration_specifiers   go to state 42
    abstract_declaration_specifiers2  go to state 43
    type_specifier                    go to state 44
    type_qualifier                    go to state 45
    type_domain                       go to state 46
    storage_class                     go to state 47
    function_specifier                go to state 48
    in_out                            go to state 49
    struct_or_connector_specifier     go to state 50
    struct_or_connector_header        go to state 51
    untagged_struct_header            go to state 52
    cbuffer_decl                      go to state 53
    cbuffer_header                    go to state 54
    template_decl                     go to state 55
    template_decl_header              go to state 56
    template_params                   go to state 57
    templated_type                    go to state 58
    enum_specifier                    go to state 59
    enum_header                       go to state 60
    untagged_enum_header              go to state 61
    attribute                         go to state 62
    function_definition               go to state 63
    function_definition_header        go to state 64


State 1

   59 type_specifier: error .

    $default  reduce using rule 59 (type_specifier)


State 2

   53 type_specifier: BOOLEAN_SY .

    $default  reduce using rule 53 (type_specifier)


State 3

   60 type_qualifier: CONST_SY .

    $default  reduce using rule 60 (type_qualifier)


State 4

   10 declaration: ERROR_SY . ';'

    ';'  shift, and go to state 65


State 5

   63 storage_class: EXTERN_SY .

    $default  reduce using rule 63 (storage_class)


State 6

   51 type_specifier: FLOAT_SY .

    $default  reduce using rule 51 (type_specifier)


State 7

   71 in_out: IN_SY .

    $default  reduce using rule 71 (in_out)


State 8

   69 function_specifier: INLINE_SY .

    $default  reduce using rule 69 (function_specifier)


State 9

   73 in_out: INOUT_SY .

    $default  reduce using rule 73 (in_out)


State 10

   49 type_specifier: INT_SY .

    $default  reduce using rule 49 (type_specifier)


State 11

   50 type_specifier: UNSIGNED_SY . INT_SY

    INT_SY  shift, and go to state 66


State 12

   70 function_specifier: INTERNAL_SY .

    $default  reduce using rule 70 (function_specifier)


State 13

   72 in_out: OUT_SY .

    $default  reduce using rule 72 (in_out)


State 14

   21 abstract_declaration_specifiers: PACKED_SY . abstract_declaration_specifiers

    error             shift, and go to state 1
    BOOLEAN_SY        shift, and go to state 2
    CONST_SY          shift, and go to state 3
    EXTERN_SY         shift, and go to state 5
    FLOAT_SY          shift, and go to state 6
    IN_SY             shift, and go to state 7
    INLINE_SY         shift, and go to state 8
    INOUT_SY          shift, and go to state 9
    INT_SY            shift, and go to state 10
    UNSIGNED_SY       shift, and go to state 11
    INTERNAL_SY       shift, and go to state 12
    OUT_SY            shift, and go to state 13
    PACKED_SY         shift, and go to state 14
    STATIC_SY         shift, and go to state 15
    STRUCT_SY         shift, and go to state 16
    TEXOBJ_SY         shift, and go to state 17
    TYPEIDENT_SY      shift, and go to state 19
    TEMPLATEIDENT_SY  shift, and go to state 20
    UNIFORM_SY        shift, and go to state 21
    VOID_SY           shift, and go to state 22
    ROWMAJOR_SY       shift, and go to state 24
    COLMAJOR_SY       shift, and go to state 25
    NOINTERP_SY       shift, and go to state 26
    PRECISE_SY        shift, and go to state 27
    SHARED_SY         shift, and go to state 28
    GROUPSHARED_SY    shift, and go to state 29
    VOLATILE_SY       shift, and go to state 30
    ENUM_SY           shift, and go to state 31
    LOWP_SY           shift, and go to state 32
    MEDIUMP_SY        shift, and go to state 33
    HIGHP_SY          shift, and go to state 34

    abstract_declaration_specifiers   go to state 67
    abstract_declaration_specifiers2  go to state 43
    type_specifier                    go to state 44
    type_qualifier                    go to state 45
    type_domain                       go to state 46
    storage_class                     go to state 47
    function_specifier                go to state 48
    in_out                            go to state 49
    struct_or_connector_specifier     go to state 50
    struct_or_connector_header        go to state 51
    untagged_struct_header            go to state 52
    templated_type                    go to state 58
    enum_specifier                    go to state 59
    enum_header                       go to state 60
    untagged_enum_header              go to state 61


State 15

   62 storage_class: STATIC_SY .

    $default  reduce using rule 62 (storage_class)


State 16
